--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: pip
       - run: pip install ".[dev,test]"
-      - run: black --check pygexml test test_util
-      - run: mypy pygexml test test_util
-      - run: pyright pygexml test test_util
+      - run: black --check pygexml test
+      - run: mypy pygexml test
+      - run: pyright pygexml test
       - run: pytest -v
 
   pages:
